# mr_pinchy_ros2_sim

./: README.md
src/mr_pinchy_robot_bringup/: CMakeLists.txt  package.xml
src/mr_pinchy_robot_bringup/config/: controllers.yaml  gz_bridge.yaml
src/mr_pinchy_robot_bringup/launch/: mr_princhy_gazebo.launch.xml  rsp.launch.py
src/mr_pinchy_robot_bringup/worlds/: empty.world
src/mr_pinchy_robot_description/: CMakeLists.txt  package.xml
src/mr_pinchy_robot_description/launch/: display.launch.xml
src/mr_pinchy_robot_description/meshes/: arm_base.stl  arm_base_ascii.stl  link_1.stl  link_2.stl
src/mr_pinchy_robot_description/rviz/: rviz_config.rviz
src/mr_pinchy_robot_description/urdf/: arm_frame.xacro  common_config.xacro  gazebo_control.xacro  hashesha.gazebo  hashesha_frame.xacro  my_first_robot.urdf.xacro
src/pinchy_robot_controller/: package.xml  setup.cfg  setup.py
src/pinchy_robot_controller/pinchy_robot_controller/: finish_line.py  mr_pinchy_controller.py
